stave-macros/tests/fail/builder_tuple_struct.rs
use stave_macros::builder;

#[builder]
struct Pair(u32, u32);

fn main() {}
