stave-macros/tests/fail/builder_tuple_struct.stderr
error: #[builder] can only be applied to structs with named fields
 --> tests/fail/builder_tuple_struct.rs:4:12
  |
4 | struct Pair(u32, u32);
  |            ^^^^^^^^^^
